--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
   },
   "homepage": "https://github.com/tafadzwabchingore/cse341-project2#readme",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "joi": "^18.0.1",
-    "mongoose": "^8.18.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.18.2",
+    "morgan": "^1.10.1",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
